# dual_gripper

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: dual_gripper_motors.launch  gripper_motors.launch  params.launch
scripts/: .gitignore  calibrate.py  calibrate_dual.py  calibrate_left.py  calibrate_right.py  dof_tour.py  dual_gripper.launch.py  gripper_launcher.py
src/: ReflexSFHand.py  calibrate_dual.py  calibrate_left.py  calibrate_right.py  dual_gripper.launch.py  dual_gripper.py  reflex_sf_twoHands.py~
src/gripper/: ReflexSFHand.py  __init__.py  motor.py
yaml/: dual_gripper.yaml  dual_gripper_left_zero_points.yaml  dual_gripper_right_zero_points.yaml  gripper.yaml  gripper_left_zero_points.yaml  gripper_right_zero_points.yaml
