<?xml version="1.0"?>
<package>
  <name>gripper</name>
  <version>0.0.0</version>
  <description>The gripper package</description>

  <maintainer email="gsgrebe@gmail.com">Greg Grebe</maintainer>
  <license>TODO</license>
  <url type="repository">http://github.com/gsgrebe/gripper</url>
  <author email="gsgrebe@gmail.com">Greg Grebe</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
